re-strucutre layers

--- a/model/model.ipynb
+++ b/model/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -24,43 +24,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m200/200\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m17s\u001b[0m 83ms/step - accuracy: 0.6086 - loss: 0.6510 - val_accuracy: 0.7431 - val_loss: 0.5303\n",
+      "\u001b[1m200/200\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m20s\u001b[0m 99ms/step - accuracy: 0.5880 - loss: 0.6530 - val_accuracy: 0.7775 - val_loss: 0.4886\n",
       "Epoch 2/5\n",
-      "\u001b[1m200/200\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m20s\u001b[0m 98ms/step - accuracy: 0.8273 - loss: 0.4140 - val_accuracy: 0.7875 - val_loss: 0.4826\n",
+      "\u001b[1m200/200\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m21s\u001b[0m 107ms/step - accuracy: 0.8353 - loss: 0.3855 - val_accuracy: 0.7881 - val_loss: 0.4760\n",
       "Epoch 3/5\n",
-      "\u001b[1m200/200\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m20s\u001b[0m 102ms/step - accuracy: 0.9033 - loss: 0.2690 - val_accuracy: 0.7644 - val_loss: 0.5111\n",
+      "\u001b[1m200/200\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m20s\u001b[0m 100ms/step - accuracy: 0.9024 - loss: 0.2564 - val_accuracy: 0.7775 - val_loss: 0.5612\n",
       "Epoch 4/5\n",
-      "\u001b[1m200/200\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m20s\u001b[0m 99ms/step - accuracy: 0.9450 - loss: 0.1644 - val_accuracy: 0.7825 - val_loss: 0.5983\n",
+      "\u001b[1m200/200\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m21s\u001b[0m 104ms/step - accuracy: 0.9408 - loss: 0.1559 - val_accuracy: 0.7794 - val_loss: 0.6220\n",
       "Epoch 5/5\n",
-      "\u001b[1m200/200\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m19s\u001b[0m 97ms/step - accuracy: 0.9557 - loss: 0.1263 - val_accuracy: 0.7594 - val_loss: 0.7315\n",
-      "\u001b[1m50/50\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 32ms/step - accuracy: 0.7705 - loss: 0.7486\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test Accuracy: 0.7593749761581421\n"
+      "\u001b[1m200/200\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m18s\u001b[0m 92ms/step - accuracy: 0.9618 - loss: 0.1114 - val_accuracy: 0.7850 - val_loss: 0.7107\n",
+      "\u001b[1m50/50\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 28ms/step - accuracy: 0.7971 - loss: 0.6710\n",
+      "Test Accuracy: 0.7850000262260437\n"
      ]
     }
    ],
    "source": [
     "import pickle\n",
     "import tensorflow as tf\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
     "from tensorflow.keras.preprocessing.text import Tokenizer\n",
     "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.layers import Embedding, LSTM, Dense\n",
     "from sklearn.model_selection import train_test_split\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
+    "\n",
     "\n",
     "df = pd.read_csv('reviews.csv')\n",
     "\n",
@@ -106,7 +95,7 @@
     "loss, accuracy = model.evaluate(X_test, y_test)\n",
     "print(f'Test Accuracy: {accuracy}')\n",
     "\n",
-    "model.save('sentiment_model.h5')"
+    "model.save('sentiment_model.keras')"
    ]
   }
  ],
